--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ready to React</title>
     <meta name="description" content="The UWCS course on the ultimate web dev library"/>
@@ -14,7 +13,7 @@
     <!-- Open Graph Protocol -->
     <meta property="og:title" content="Ready to React">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="%PUBLIC_URL%/ogp.png">
+    <meta property="og:image" content="/ogp.png">
     <meta property="og:url" content="https://readytoreact.net">
     <meta property="og:description" content="The UWCS course on the ultimate web dev library">
     <meta property="og:image:type" content="image/png">
